Fixes scrolling issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -161,18 +161,13 @@ footer {
   margin-top: 25px;
 }
 
-@media (max-width: 570px) {
+@media (max-width: 500px) {
   .sidebar {
-    position: relative;
     width: 100%;
-    overflow-x: hidden;
 
-    padding-top: 0;
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .copyright-info {
-    margin-bottom: 0;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 }
